<resources>
    <string name="app_name">Ponto Digital</string>
    <string name="action_settings">Settings</string>
    <string name="name">Nome</string>
    <string name="allocation_single_title">Aloca\u00E7\u00E3o</string>
    <string name="allocation_add_new_activity">Adicionar atividade ...</string>

    <string name="icon_heart">&#xe145;</string>

    <string name="sunday_short">D</string>
    <string name="monday_short">S</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">Q</string>
    <string name="thrusday_short">Q</string>
    <string name="friday_short">S</string>
    <string name="saturday_short">S</string>
    <string name="fragment_picker_title">Escolha uma Atividade</string>
</resources>
