<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="16">

        <LinearLayout style="@style/week_day_button_wrapper"
            android:layout_weight="1"/>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/sunday_short" />
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/monday_short"/>
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/tuesday_short"/>
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/wednesday_short"/>
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/thrusday_short"/>
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/friday_short"/>
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper">
            <Button
                style="@style/week_day_button"
                android:text="@string/saturday_short"/>
        </LinearLayout>

        <LinearLayout style="@style/week_day_button_wrapper"
            android:layout_weight="1"/>

</merge>

