<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:weightSum="1">

    <ScrollView
        tools:showIn="@layout/activity_allocation"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:scrollbars="vertical"
                android:weightSum="1"
                android:focusable="true"
                android:background="@color/white"
                android:elevation="4dp"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/week_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:weightSum="16"
                    android:layout_marginTop="10dp">

                    <LinearLayout style="@style/week_day_button_wrapper"
                        android:layout_weight="1"/>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/sunday_short" />
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/monday_short"/>
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/tuesday_short"/>
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/wednesday_short"/>
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/thrusday_short"/>
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/friday_short"/>
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper">
                        <Button
                            style="@style/week_day_button"
                            android:text="@string/saturday_short"/>
                    </LinearLayout>

                    <LinearLayout style="@style/week_day_button_wrapper"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    tools:ignore="Orientation">
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/listview_activity_allocation"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent">
            </ListView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/add_new_activity"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/allocation_add_new_activity"
            android:paddingTop="6dp"
            android:paddingLeft="10dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textColorHint="@color/lightGray"/>

    </LinearLayout>

</LinearLayout>